-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.14.0 RC1
-
None
-
0fcd782bd3690867f19420270bcc329325f04424 (qt/qtbase/5.15)
Read the attached md with QTD-based editor (e.g. the textedit example) and re-write it. The output is quite different.
- relates to
-
QTBUG-104997 markdown writer doesn't correctly write blockquotes containing lists
-
- Reported
-
-
QTBUG-111707 markdown writer needs to add more newlines after (some) list items
-
- Reported
-