tests/auto/gui/text/qtextmarkdownwriter/tst_qtextmarkdownwriter.cpp
@@ -369,6 +369,7 @@ void tst_QTextMarkdownWriter::rewriteDocument_data()
     QTest::newRow("list items after headings") << "headingsAndLists.md";
     QTest::newRow("word wrap") << "wordWrap.md";
     QTest::newRow("links") << "links.md";
+    QTest::newRow("lists and code blocks") << "listsAndCodeBlocks.md";
 }
 
 void tst_QTextMarkdownWriter::rewriteDocument()
